# Cpp-Logging-Component-on-Independent-Threads

./: .gitignore  DoubleBuffer.hpp  FilesRoller.hpp  Level.cpp  LogInfo.cc  LogInfo.hpp  LogProducer.hpp  LogStarter.cc  LogStarter.hpp  README.md  TEST.md  dbwg.log.h  level.cpp  level.hpp  logInfo.cc  logInfo.hpp  logSink.cc  logSink.hpp  makefile  prompt  ring.hpp  test.cc  test.out  utils.hpp
back_up/: ring.cpp
cmake_out/include/dbwg/: DoubleBuffer.hpp  FilesRoller.hpp  LogInfo.hpp  LogStarter.hpp  dbwg_logger.hpp
logComponent/: CMakeCache.txt  CMakeLists.txt  DoubleBuffer.hpp  FilesRoller.hpp  LogProducer.hpp  LogStarter.cc  Makefile  SyncLogger.hpp  UniqueFD.hpp  cmake_install.cmake  dbwg.log.h  install_manifest.txt  test.cc
logComponent/include/dbwg/: DoubleBuffer.hpp  LogStarter.hpp  SyncLogger.hpp  UniqueFD.hpp  dbwg_logger.hpp  utils.hpp
logComponent/src/: DoubleBuffer.cpp  FilesRoller.cpp  LogInfo.cpp  LogStarter.cpp  SyncLogger.cpp  UniqueFD.cpp  dbwg_logger.cpp  utils.cpp
